# snowflake-sentiment-analysis

./: README.md
results/: tpch_benchmark.csv  udtf_sentiment_vectorized.csv
sentiment-analysis/: tpch_benchmarks.sql  yelp_reviews.sql  yelp_reviews_udtf.sql
sentiment-analysis/functions/: clean_py.py  naive_bayes.py  naive_bayes_vectorized.py  pyproject.toml  yelp_samples.py
src/: tpch_benchmarks.sql  yelp_reviews.sql  yelp_reviews_udtf.sql
src/functions/: naive_bayes_vectorized.py  pyproject.toml  yelp_samples.py
src/functions/deprecated/: standard_udtf.py
